    distribution) by Steinar H. Gunderson.  Closes: #341903.
  * patches/all/submitted-iconv-E13B.diff: new patch to fix wrong E13B
    charset alias. patches/any/submitted-iconv-colon.diff: new patch to
    allow colons in charset names.  Closes: #91935.
  * New Hungarian debconf translation, by Attila Szervác.  Closes: #420420.

 -- Aurelien Jarno <aurel32@debian.org>  Sun, 22 Apr 2007 12:34:39 +0200

glibc (2.5-3) unstable; urgency=low

  [ Pierre Habouzit ]
  * patches/any/submitted-unistd_XOPEN_VERSION.diff: set _XOPEN_VERSION to 600
    when __USE_XOPEN2K is set. Closes: #203412.
  * patches/any/cvs-glob-c.diff: fixes glob wrt \/ escapes (among other
    fixes). Closes: #234880.

  [ Aurelien Jarno ]
  * Update Italian debconf translation, by Luca Monducci.  Closes: #419399.
  * Put back ld.so into optimized packages, it can be useful in some cases.
  * Update French debconf translation, by Christian Perrier.  Closes: #419445.
  * Switch from gzip to lzma for compressing the locales in the locales-all
    package. The unpacked size is decreased by 10 and the packed size by 4 for
    no measurable difference on the unpacking time.
  * patches/any/submitted-gethostbyname_r.diff: new patch to fix unaligned
    memory access in gethostbyname_r.diff().  Closes: #419459.
  * Rewrite from scratch /etc/ld.so.nohwcap handling.  Closes: #419036
    - script.in/nohwcap.sh: new snipplet to check dpkg and handle
      /etc/ld.so.nohwcap
    - rules.d/debhelper.mk: replace NOHWCAP with nohwcap.sh in debhelper
      scripts
    - debhelper.in/libc.preinst: only touch /etc/ld.so.nohwcap
    - debhelper.in/libc.postinst: replace the old code with NOHWCAP,
      add code to remove /etc/ld.so.hwcappkgs file on upgrade
    - debhelper.in/libc-otherbuild.postrm: replace the old code with NOHWCAP
    - debhelper.in/libc-otherbuild.postinst: ditto
    - debhelper.in/libc-otherbuild.preinst: remove
  * debhelper.in/libc.install: remove /usr/bin/lddlibc4 from the libc6
    package.