@@ -27,8 +27,11 @@ glibc (2.5-4) UNRELEASED; urgency=low
     charset alias. patches/any/submitted-iconv-colon.diff: new patch to
     allow colons in charset names.  Closes: #91935.
   * New Hungarian debconf translation, by Attila Szervác.  Closes: #420420.
+  * debian/patches/any/local-ldd.diff: update to discard the error message
+    that appears if one of the dynamic loader is not supported by the 
+    kernel.  Closes: #263494.
 
- -- Aurelien Jarno <aurel32@debian.org>  Sun, 22 Apr 2007 12:34:39 +0200
+ -- Aurelien Jarno <aurel32@debian.org>  Sun, 22 Apr 2007 15:02:00 +0200
 
 glibc (2.5-3) unstable; urgency=low
 
